tests/errors/test_24.xpp
// If statement condition is not boolean

fn main() void {
    if 1 {
        
    } 
}